argocd/apps/devsales-backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devsales-backend
  namespace: devsales-backend
  labels:
    app: devsales-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devsales-backend
  template:
    metadata:
      labels:
        app: devsales-backend
    spec:
      imagePullSecrets:
        - name: devsoul-registry-secret
      containers:
      - name: devsales-backend
        image: repo.devsoul.net/devsales-backend:cbbf6780fa645a02f70e408db1011b43ede19066
        ports:
        - containerPort: 3001
