argocd/apps/devsales-backend/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devsales-backend-ingress
  namespace: devsales-backend
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-dns"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  tls:
  - hosts:
    - apidevsales-dev.devsoul.net
    secretName: devsales-backend-tls

  ingressClassName: nginx
  rules:
  - host: apidevsales-dev.devsoul.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: devsales-backend
            port:
              number: 3001
